# taco-compression-benchmarks

./: .gitignore  .gitmodules  Makefile
opencv_bench/: CMakeLists.txt  FindOpenCV.cmake  main.cpp  timers.h
scripts/: brighten.sh  brighten_ed.sh  brighten_sita.sh  gen_matrices.py  hist_gen.py  merge_csv.py  microbench.sh  movie.sh  movie_alpha_bs.sh  movie_alpha_ed.sh  movie_alpha_sita.sh  movie_both_bs.sh  movie_both_ed.sh  movie_both_sita.sh  movie_both_stock.sh  movie_mask_bs.sh  movie_mask_ed.sh  movie_mask_sita.sh  mri.sh  opencv.sh  sketch_alpha.sh  small_test.sh  spmv.sh  spmv_graphs.py  spmv_perf.sh  spmv_rand.sh
taco/: CMakeLists.txt  bench.cpp  bench.h  brighten.cpp  lodepng.cpp  lz77_compress.cpp  lz77_compress.h  main.cpp  microbenchmarks.cpp  movie_alpha.cpp  movie_brighten.cpp  movie_convert_rle_lz77.cpp  movie_decompress.cpp  movie_mask.cpp  movie_mask_mul.cpp  movie_recompress_brighten.cpp  movie_recompress_subtitle.cpp  movie_subtitle.cpp  mri.cpp  png_reader.cpp  png_reader.h  rapidcsv.h  spmv.cpp  spmv.h  utils.cpp  utils.h
taco/compress/: collect_imgs.sh  lz77x.c  save_dense.cpp
taco/compress/rle/: Makefile  sample.c  temp.rle  temp.txt
taco/generated_code/: DENSE_col.c  DENSE_col_float.c  DENSE_row.c  LZ77_col.c  LZ77_col_float.c  LZ77_row.c  RLEP_col.c  RLEP_col_8b.c  RLEP_col_float.c  RLEP_row.c  RLE_col.c  RLE_col_float.c  RLE_row.c  SPARSE_col.c  SPARSE_col_float.c  SPARSE_row.c  SPARSE_row_spnz.c
